# SuperDeutschLerner3000

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  createVSProject.bat  roadmap.txt
examples/: lesson1.les  lesson2.les
lessons/: ST_s01e02.les  TU_anmeldung.les  cours_sem1_1.les  cours_sem1_2.les  cours_sem1_3.les  der_Marsianer1.les  der_Marsianer2.les
resources/: resources.aps  resources.qrc
resources/styles/: MainWindow.css
src/: CMakeLists.txt  main.cpp  mainCLI.cpp
src/controller/: Command.h  Controller.cpp  Controller.h  State.h  StateEditing.cpp  StateEditing.h  StateInitial.cpp  StateInitial.h  StateTraining.cpp  StateTraining.h
src/model/: Lesson.cpp  Lesson.h  TrainingSession.cpp  TrainingSession.h  Tuple.cpp  Tuple.h
src/parser/: Parser.cpp  Parser.h
src/view/: GenericEventDispatcher.h  GenericViewer.h
src/view/CLI/: CLIEventDispatcher.cpp  CLIEventDispatcher.h  CLIViewer.cpp  CLIViewer.h
src/view/UI/: CompressibleLabel.cpp  CompressibleLabel.h  LessonDelegate.cpp  LessonDelegate.h  MainEventDispatcher.cpp  MainEventDispatcher.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  test.cpp  test_Lesson.cpp  test_Tuple.cpp
